// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Dropdown rtl render component should be rendered correctly in RTL direction 1`] = `
<span
  class="g-dropdown-trigger g-dropdown-rtl"
/>
`;

exports[`Dropdown should render custom dropdown correctly 1`] = `
Array [
  <button
    class="g-dropdown-trigger g-dropdown-open"
    type="button"
  >
    button
  </button>,
  <div
    class="g-dropdown g-slide-up-appear g-slide-up-appear-prepare g-slide-up css-var-root g-dropdown-css-var g-dropdown-placement-bottomLeft"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div>
      <ul
        class="g-dropdown-menu g-dropdown-menu-root g-dropdown-menu-vertical g-dropdown-menu-light css-var-root g-dropdown-css-var css-var-root g-dropdown-menu-css-var"
        data-menu-list="true"
        role="menu"
        tabindex="0"
      >
        <li
          class="g-dropdown-menu-item g-dropdown-menu-item-only-child"
          data-menu-id="rc-menu-uuid-1"
          role="menuitem"
          tabindex="-1"
        >
          <span
            class="g-dropdown-menu-title-content"
          >
            foo
          </span>
        </li>
      </ul>
      <div
        aria-hidden="true"
        style="display: none;"
      />
      <div
        class="dropdown-custom-node"
      >
        CUSTOM NODE
      </div>
    </div>
  </div>,
]
`;

exports[`Dropdown support custom transitionName 1`] = `
Array [
  <button
    class="g-dropdown-trigger g-dropdown-open"
    type="button"
  >
    button
  </button>,
  <div
    class="g-dropdown move-up-appear move-up-appear-prepare move-up css-var-root g-dropdown-css-var g-dropdown-placement-bottomLeft"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <ul
      class="g-dropdown-menu g-dropdown-menu-root g-dropdown-menu-vertical g-dropdown-menu-light css-var-root g-dropdown-css-var css-var-root g-dropdown-menu-css-var"
      data-menu-list="true"
      role="menu"
      tabindex="0"
    >
      <li
        class="g-dropdown-menu-item g-dropdown-menu-item-only-child"
        data-menu-id="rc-menu-uuid-1"
        role="menuitem"
        tabindex="-1"
      >
        <span
          class="g-dropdown-menu-title-content"
        >
          foo
        </span>
      </li>
    </ul>
    <div
      aria-hidden="true"
      style="display: none;"
    />
  </div>,
]
`;
